# grpcdemo

./: .gitignore  README.md  main.py  pyproject.toml
cert/: generate_certificates.sh
protos/: demo_proto.proto  generate_proto.py
services/: __init__.py  grpc_service.py
